// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme 1`] = `
.cfRhKF {
  padding: 4em;
  background: papayawhip;
}

<section
  className="cfRhKF"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`react-test-renderer 1`] = `
.cfRhKF {
  padding: 4em;
  background: papayawhip;
}

.kZQsGZ {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  className="cfRhKF"
>
  <h1
    className="kZQsGZ"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;
